--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Frontend Mentor | Profile card component</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
